Fix: Skills section can collapse; skills moved up

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -15,7 +15,7 @@ ul {
 }
 
 .closed {
-  display: none;
+  display: none !important;
 }
 
 .skills-container {
